--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
     <div class="header_panel">
       <span class="control_span">
         [DATA]
-        <a id="idData1" name="dataChangeMenu" class="active">Data 1</a>
-        <a id="idData2" name="dataChangeMenu">Data 2</a>
-        <a id="idData3" name="dataChangeMenu">Data 3</a>
+        <a id="idData1" name="dataChangeMenu" class="active">図3.6</a>
+        <a id="idData2" name="dataChangeMenu">図3.7</a>
       </span>
       <span style="float: right">
         <a href="https://github.com/takamitsu-iida/network-diagram3" target="_blank" rel="noopener noreferrer">source code</a> (github)
