add favicon link

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html lang="ja">
 
 <head>
-  <title>network diagram</title>
+  <title>Dijkstra</title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
+  <link rel="shortcut icon" type="image/x-icon" href="./static/site/img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="./static/site/css/iida.css" />
 
   <!-- jQuery -->
@@ -17,12 +18,13 @@
   <!-- cytoscape.js -->
   <script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
 
+  <!-- layout-base.js -->
+  <script src="https://unpkg.com/layout-base/layout-base.js"></script>
+
   <!-- cytoscape-panzom.js -->
   <script src="https://unpkg.com/cytoscape-panzoom/cytoscape-panzoom.js"></script>
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/cytoscape-panzoom/cytoscape.js-panzoom.css" />
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/cytoscape-panzoom/font-awesome-4.0.3/css/font-awesome.min.css" />
-
-  <script src="https://unpkg.com/layout-base/layout-base.js"></script>
 
   <!-- iida.main.js -->
   <script type="text/javascript" src="./static/site/js/iida.main.js"></script>
